Remove elementos inúteis

--- a/cursos.html
+++ b/cursos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head lang="ru">
+<html lang="pt-br">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -13,13 +13,10 @@
   <link href="img/favicon.png" rel="icon" type="image/png">
   <link href="img/favicon.ico" rel="shortcut icon">
 
-  <script src="js/plugins.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/interface.js"></script>
-
   <link rel="stylesheet" href="css/lib/font-awesome/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/custom.css">
+
 </head>
 <body class="with-side-menu">
 
@@ -30,7 +27,7 @@
       <img class="hidden-lg-up" src="img/logo-2-mob.png" alt="">
     </a>
     <button class="hamburger hamburger--htla">
-      <span>toggle menu</span>
+      <span>Menu</span>
     </button>
     <div class="site-header-content">
       <div class="site-header-content-in">
@@ -127,25 +124,90 @@
         <div class="mobile-menu-right-overlay"></div>
         <div class="site-header-collapsed">
           <div class="site-header-collapsed-in">
-            <div class="dropdown dropdown-typical">
+            <div class="dropdown dropdown-typical" style="width: 700px;">
               <a class="dropdown-toggle" id="dd-header-sales" data-target="#" href="teste.html" data-toggle="dropdown"
                  aria-haspopup="true" aria-expanded="false">
-                <span class="font-icon">  Filtros de Indicadores</span>
-                <span class="lbl">Sales</span>
+                <span class="font-icon">Unidade:&nbsp;&nbsp;<font color="#4AC462">ASA SUL</b></font></span>
               </a>
               <div class="dropdown-menu" aria-labelledby="dd-header-sales">
-                <a class="dropdown-item" href="#"><span class="font-icon font-icon-ok" style="font-size: 14px;"></span>Hoje</a>
-                <a class="dropdown-item" href="#"><span class="font-icon font-icon-del" style="font-size: 12px;"></span>Semanal</a>
-                <a class="dropdown-item" href="#"><span class="font-icon font-icon-del" style="font-size: 12px;"></span>Mensal</a>
-                <a class="dropdown-item" href="#"><span class="font-icon font-icon-del" style="font-size: 12px;"></span>Anual</a>
+                <div class="row">
+                  <div class="col-md-4">
+                    <section>
+                      <ul class="side-table-of-contents">
+                        <li><a href="#">Unidades:</a>
+                          <ul>
+                            <li><a href="#"><span class="fa fa-caret-right"
+                                                  style="font-size: 12px; padding-right: 6px;"></span>AGUAS CLARAS</a>
+                            </li>
+                            <li><a href="#"><span class="fa fa-caret-right"
+                                                  style="font-size: 12px; padding-right: 6px;"></span>ASA NORTE</a></li>
+                            <li><a href="#" class="active"><span class="fa fa-caret-right"
+                                                                 style="font-size: 12px; padding-right: 6px;"></span>ASA
+                              SUL</a></li>
+                            <li><a href="#"><span class="fa fa-caret-right"
+                                                  style="font-size: 12px; padding-right: 6px;"></span>LAGO SUL</a></li>
+                            <li><a href="#"><span class="fa fa-caret-right"
+                                                  style="font-size: 12px; padding-right: 6px;"></span>SUDUESTE</a></li>
+                            <li><a href="#"><span class="fa fa-caret-right"
+                                                  style="font-size: 12px; padding-right: 6px;"></span>TAGUATINGA</a>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </section>
+                  </div>
+                  <div class="col-md-4">
+                    <section>
+                      <ul class="side-table-of-contents">
+                        <li><a href="#">Postos Avançados:</a>
+                          <ul>
+                            <li><a href="#"><span class="fa fa-caret-right"
+                                                  style="font-size: 12px; padding-right: 6px;"></span>CIMAN</a></li>
+                            <li><a href="#"><span class="fa fa-caret-right"
+                                                  style="font-size: 12px; padding-right: 6px;"></span>GALOIS</a></li>
+                            <li><a href="#"><span class="fa fa-caret-right"
+                                                  style="font-size: 12px; padding-right: 6px;"></span>LEONARDO DA VINCI</a>
+                            </li>
+                            <li><a href="#"><span class="fa fa-caret-right"
+                                                  style="font-size: 12px; padding-right: 6px;"></span>MACKENZIE</a></li>
+                            <li><a href="#"><span class="fa fa-caret-right"
+                                                  style="font-size: 12px; padding-right: 6px;"></span>MARISTA</a></li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </section>
+                  </div>
+                  <div class="col-md-4">
+                    <section>
+                      <ul class="side-table-of-contents">
+                        <li><a href="#">&nbsp;</a>
+                          <ul>
+                            <li><a href="#"><span class="fa fa-caret-right"
+                                                  style="font-size: 12px; padding-right: 6px;"></span>SANTO ANTÔNIO</a>
+                            </li>
+                            <li><a href="#"><span class="fa fa-caret-right"
+                                                  style="font-size: 12px; padding-right: 6px;"></span>COR JESU</a></li>
+                            <li><a href="#"><span class="fa fa-caret-right"
+                                                  style="font-size: 12px; padding-right: 6px;"></span>CATÓLICA</a></li>
+                            <li><a href="#"><span class="fa fa-caret-right"
+                                                  style="font-size: 12px; padding-right: 6px;"></span>OBJETIVO</a></li>
+                            <li><a href="#"><span class="fa fa-caret-right"
+                                                  style="font-size: 12px; padding-right: 6px;"></span>UPIS</a></li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </section>
+                  </div>
+                </div>
               </div>
             </div>
           </div><!--.site-header-collapsed-in-->
-        </div><!--.site-header-collapsed-->
+        </div>
       </div><!--site-header-content-in-->
     </div><!--.site-header-content-->
   </div><!--.container-fluid-->
 </header><!--.site-header-->
+
 
 <div class="mobile-menu-left-overlay"></div>
 <nav class="side-menu">
@@ -198,7 +260,7 @@
     <li class="green with-sub">
 	            <span>
 	                <i class="font-icon font-icon-cogwheel"></i>
-	                <span class="lbl">Segurança</span>
+	                <span class="lbl">Configuração</span>
 	            </span>
       <ul>
         <li><a href="test.html"><span class="lbl">Menu 1</span></a></li>
@@ -250,6 +312,7 @@
     </ul>
   </section>
 </nav><!--.side-menu-->
+
 
 <div class="page-content">
   <div class="container-fluid">
@@ -738,6 +801,9 @@
   </div>
 </div>
 
+<script src="js/plugins.js"></script>
+<script src="js/app.js"></script>
+<script src="js/interface.js"></script>
 
 </body>
 </html>
