Ajustes nas telas

--- a/elementos.html
+++ b/elementos.html
@@ -313,6 +313,34 @@
     </section>
     <section>
       <div class="row">
+        <div class="col-sm-4">
+          <section class="widget-simple-sm">
+            <div class="widget-simple-sm-icon bck-analitcs-grey">
+              <i class="fa fa-sitemap" aria-hidden="true"></i>
+            </div>
+            <div class="widget-simple-sm-bottom"><h5>7 Grupos cadastrados</h5></div>
+          </section>
+        </div>
+        <div class="col-sm-4">
+          <section class="widget-simple-sm">
+            <div class="widget-simple-sm-icon bck-analitcs-grey">
+              <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+            </div>
+            <div class="widget-simple-sm-bottom"><h5>34 cursos</h5></div>
+          </section>
+        </div>
+        <div class="col-sm-4">
+          <section class="widget-simple-sm">
+            <div class="widget-simple-sm-icon bck-analitcs-grey">
+              <i class="fa fa-users" aria-hidden="true"></i>
+            </div>
+            <div class="widget-simple-sm-bottom"><h5>1.500 alunos</h5></div>
+          </section>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="row">
         <div class="col-lg-12">
           <section class="card">
             <header class="card-header">
