--- a/grupos.html
+++ b/grupos.html
@@ -40,60 +40,8 @@
       </ol>
     </section>
 
-    <section>
-      <div class="row">
-        <div class="col-sm-4">
-          <section class="widget-simple-sm">
-            <div class="widget-simple-sm-icon bck-analitcs-grey">
-              <i class="fa fa-sitemap" aria-hidden="true"></i>
-            </div>
-            <div class="widget-simple-sm-bottom"><h5>7 Grupos cadastrados</h5></div>
-          </section>
-        </div>
-        <div class="col-sm-4">
-          <section class="widget-simple-sm">
-            <div class="widget-simple-sm-icon bck-analitcs-grey">
-              <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-            </div>
-            <div class="widget-simple-sm-bottom"><h5>34 cursos</h5></div>
-          </section>
-        </div>
-        <div class="col-sm-4">
-          <section class="widget-simple-sm">
-            <div class="widget-simple-sm-icon bck-analitcs-grey">
-              <i class="fa fa-users" aria-hidden="true"></i>
-            </div>
-            <div class="widget-simple-sm-bottom"><h5>1.500 alunos</h5></div>
-          </section>
-        </div>
-      </div>
-    </section>
 
-    <section>
-      <div class="row mt-md">
-        <div class="col-lg-12">
-          <section class="card">
-            <header class="card-header">
-              <div class="row">
-                <div class="col-sm-6 col-sm-offset-3">
-                  <div class="form-group input-group mb-0">
-                    <input type="text" class="form-control" aria-label="" placeholder="Buscar grupos">
-                    <div class="input-group-btn">
-                      <button type="button" class="btn btn-default-outline">
-                        <i class="fa fa-search" aria-hidden="true"></i>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </header>
-            <div class="card-block collapse" id="collapseBuscaAvancada">
 
-            </div>
-          </section>
-        </div>
-      </div>
-    </section>
 
 
     <section>
@@ -138,8 +86,9 @@
                   <tbody>
 
                   <tr>
-                    <td data-toggle="modal"
-                        data-target="#ModalDetalhaGrupo" class="cursor-pointer"><strong>Crianças</strong></td>
+                    <td>
+                      <a data-toggle="modal"
+                         data-target="#ModalDetalhaGrupo" href="ModalDetalhaGrupo"><strong>Crianças</strong></a></td>
                     <td>5 Cursos</td>
                     <td>
                       <div class="btn-group btn-group-sm pull-right">
@@ -152,11 +101,6 @@
                           <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
                                                                aria-hidden="true"></i>
                             Editar</a>
-                          <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
-                            Duplicar</a>
-                          <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                            Inativar</a>
                           <div class="dropdown-divider"></div>
                           <a class="dropdown-item" href="#"><i class="fa fa-trash mr-xs" aria-hidden="true"></i>
                             Excluir</a>
@@ -165,9 +109,9 @@
                     </td>
                   </tr>
 
-                  <tr data-toggle="modal"
-                       data-target="#ModalAssociaCurso" class="cursor-pointer">
-                    <td><strong>Jovens adultos</strong></td>
+                  <tr>
+                    <td><a data-toggle="modal"
+                           data-target="#ModalDetalhaGrupo" href="ModalDetalhaGrupo"><strong>jovens adultos</strong></a></td>
                     <td><i class="fa fa-plus-circle" aria-hidden="true"></i> Associar cursos</td>
                     <td>
                       <div class="btn-group btn-group-sm pull-right">
@@ -180,11 +124,6 @@
                           <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
                                                                aria-hidden="true"></i>
                             Editar</a>
-                          <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
-                            Duplicar</a>
-                          <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                            Inativar</a>
                           <div class="dropdown-divider"></div>
                           <a class="dropdown-item" href="#"><i class="fa fa-trash mr-xs" aria-hidden="true"></i>
                             Excluir</a>
@@ -262,88 +201,6 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<!-- Modal associar curso -->
-<div class="modal fade" id="ModalAssociaCurso" tabindex="-1" role="dialog" aria-labelledby="ModalCadCurso">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Associar ao grupo "jovens adultos"</h4>
-      </div>
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-md-12">
-            <table class="display table table-striped table-bordered datatable-on" cellspacing="0" width="100%">
-              <thead>
-              <tr>
-                <th class="text-center">
-                  <input type="checkbox">
-                </th>
-                <th>Curso</th>
-                <th>Outros Grupo(s) associado(s)</th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr>
-                <td class="text-center">
-                  <input type="checkbox">
-                </td>
-                <td>KIDS FUN</td>
-                <td><p>Infantil</p></td>
-              </tr>
-              <tr>
-                <td class="text-center">
-                  <input type="checkbox">
-                </td>
-                <td>KIDS</td>
-                <td>
-                  <p>Crianças</p>
-                  <p>Infantil</p>
-                </td>
-
-              </tr>
-              <tr>
-                <td class="text-center">
-                  <input type="checkbox">
-                </td>
-                <td>TOP KIDS</td>
-                <td>
-                  <p>Crianças</p>
-                </td>
-              </tr>
-              <tr>
-                <td class="text-center">
-                  <input type="checkbox">
-                </td>
-                <td>JUNIOR</td>
-                <td>
-                  <p>Infantil</p>
-                </td>
-              </tr>
-              <tr>
-                <td class="text-center">
-                  <input type="checkbox">
-                </td>
-                <td>THOMAS FLEX</td>
-                <td>
-                  <p>Infantil</p>
-                </td>
-              </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Associar selecionados</button>
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
       </div>
     </div>
   </div>
