--- a/niveis.html
+++ b/niveis.html
@@ -40,90 +40,6 @@
       </ol>
     </section>
 
-    <section>
-      <div class="row mt-md">
-        <div class="col-lg-12">
-          <section class="card">
-            <header class="card-header">
-              <div class="row">
-                <div class="col-sm-5 col-sm-offset-3">
-                  <div class="form-group input-group mb-0">
-                    <input type="text" class="form-control" aria-label="" placeholder="Buscar níveis">
-                    <div class="input-group-btn">
-                      <button type="button" class="btn btn-default-outline">
-                        <i class="fa fa-search" aria-hidden="true"></i>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <p class="mt-sm"><a data-toggle="collapse" href="#collapseBuscaAvancada" aria-expanded="false"
-                                      aria-controls="collapseBuscaAvancada"><i class="fa fa-search-plus"
-                                                                               aria-hidden="true"></i> Busca
-                    avançada</a></p>
-                </div>
-              </div>
-            </header>
-            <div class="card-block collapse" id="collapseBuscaAvancada">
-              <div class="row">
-                <div class="col-sm-12">
-                  <fieldset class="form-group mb-0">
-                    <label class="form-label semibold" for="">Sistema de avaliação</label>
-                    <select class="select2" multiple="multiple">
-                      <option>Aproveitamento</option>
-                      <option>Notas</option>
-                      <option>Objetivo</option>
-                    </select>
-                  </fieldset>
-                </div>
-              </div>
-              <div class="row divider-top">
-                <div class="col-sm-3">
-                  <fieldset class="form-group mb-0">
-                    <label class="form-label semibold" for="">Quantidade de unidades</label>
-                    <input type="text" class="form-control" id="" placeholder="000">
-                    <small class="text-muted">Por exemplo: Crianças.</small>
-                  </fieldset>
-                </div>
-                <div class="col-sm-3">
-                  <label class="form-label semibold" for="">Frequência</label>
-                  <div class="checkbox-toggle mt-sm">
-                    <input type="checkbox" id="check-toggle-1"/>
-                    <label class="form-label" for="check-toggle-1">Freqência oculta</label>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <label class="form-label semibold" for="">Certificados</label>
-                  <div class="checkbox-toggle mt-sm">
-                    <input type="checkbox" id="check-toggle-2"/>
-                    <label class="form-label" for="check-toggle-2">Certificados</label>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <label class="form-label semibold" for="">Status</label>
-                  <div class="checkbox-toggle">
-                    <input type="checkbox" id="check-toggle-3"/>
-                    <label class="form-label" for="check-toggle-3">Ativos</label>
-                  </div>
-                  <div class="checkbox-toggle mt-sm">
-                    <input type="checkbox" id="check-toggle-4"/>
-                    <label class="form-label" for="check-toggle-4">Inativos</label>
-                  </div>
-                </div>
-              </div>
-              <div class="divider-top">
-                <button type="button" class="btn btn-primary btn-sm">Buscar</button>
-                <button type="button" class="btn btn-secondary btn-sm ml-md" data-toggle="collapse"
-                        href="#collapseBuscaAvancada" aria-expanded="false"
-                        aria-controls="collapseBuscaAvancada">Cancelar
-                </button>
-              </div>
-            </div>
-          </section>
-        </div>
-      </div>
-    </section>
-
 
     <section>
       <div class="row mt-sm">
@@ -154,7 +70,84 @@
 
             <div class="tab-content">
               <section role="tabpanel" class="tab-pane fade in active" id="tabs-cursos-tab-1">
-                <div class="table-responsive">
+                <section>
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <section class="widget-accordion" id="accordion-buscaavancada" role="tablist"
+                               aria-multiselectable="true">
+                        <section class="panel">
+                          <div class="panel-heading" role="tab" id="busca-headingOne">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse-busca-one"
+                               aria-expanded="true"
+                               aria-controls="collapseOne" class="">
+                              <i class="fa fa-search-plus"
+                                 aria-hidden="true"></i> Busca avançada
+                              <i class="font-icon font-icon-arrow-down"></i></a>
+                          </div>
+                          <div id="collapse-busca-one" class="panel-collapse collapse" role="tabpanel"
+                               aria-labelledby="collapse-busca-one"
+                               aria-expanded="true">
+                            <div class="panel-collapse-in">
+                              <div class="row">
+                                <div class="col-lg-3 col-md-6 col-sm-12">
+                                  <fieldset class="form-group mb-0">
+                                    <label class="form-label semibold" for="">Sistema de avaliação</label>
+                                    <select class="select2" multiple="multiple">
+                                      <option>Aproveitamento</option>
+                                      <option>Notas</option>
+                                      <option>Objetivo</option>
+                                    </select>
+                                  </fieldset>
+                                </div>
+                                <div class="col-lg-2 col-md-6 col-sm-12">
+                                  <fieldset class="form-group mb-0">
+                                    <label class="form-label semibold" for="">Unidades</label>
+                                    <input type="text" class="form-control" id="" placeholder="000">
+                                  </fieldset>
+                                </div>
+                                <div class="col-lg-3 col-md-6 col-sm-12">
+                                  <label class="form-label semibold" for="">Certificados</label>
+                                  <div class="checkbox-toggle mt-sm">
+                                    <input type="checkbox" id="check-toggle-2"/>
+                                    <label class="form-label" for="check-toggle-2">Certificados</label>
+                                  </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-12">
+                                  <label class="form-label semibold" for="">Status</label>
+                                  <div class="form-group">
+                                    <div class="btn-group btn-group-sm" data-toggle="buttons">
+                                      <label class="btn btn-secondary active">
+                                        <input type="radio" name="options" id="option3" autocomplete="off" checked="">
+                                        Todos
+                                      </label>
+                                      <label class="btn btn-secondary">
+                                        <input type="radio" name="options" id="option1" autocomplete="off"> Ativos
+                                      </label>
+                                      <label class="btn btn-secondary">
+                                        <input type="radio" name="options" id="option2" autocomplete="off"> Inativos
+                                      </label>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="row divider-top">
+
+                                <div class="col-sm-12">
+                                  <button type="button" class="btn btn-primary btn-sm">Buscar</button>
+                                  <button type="button" class="btn btn-secondary btn-sm ml-md" data-toggle="collapse"
+                                          data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true"
+                                          aria-controls="collapseOne">Cancelar
+                                  </button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </section>
+                      </section>
+                    </div>
+                  </div>
+                </section>
+                <div class="table-responsive mt-md">
                   <table class="datatable-on table table-hover">
                     <thead>
                     <tr>
@@ -167,8 +160,8 @@
                     <tbody>
 
                     <tr>
-                      <td data-toggle="modal"
-                          data-target="#ModalDetalhaNivel" class="cursor-pointer"><strong>A1</strong></td>
+                      <td><a href="ModalDetalhaNivel" data-toggle="modal"
+                             data-target="#ModalDetalhaNivel"><strong>A1</strong></a></td>
                       <td>TEENS | THOMAS-GRIGGS HIGH SCHOOL</td>
                       <td>00,00</td>
                       <td>
@@ -244,13 +237,6 @@
                   <div class="col-lg-3">
                     <label class="form-label semibold" for="">Nota média</label>
                     <input type="text" class="form-control" id="" placeholder="00,00">
-                  </div>
-                  <div class="col-lg-3">
-                    <label class="form-label semibold" for="">Frequência</label>
-                    <div class="checkbox-toggle">
-                      <input type="checkbox" id="check-OcultarFreq">
-                      <label for="check-OcultarFreq">Ocultar frequência</label>
-                    </div>
                   </div>
                   <div class="col-lg-3">
                     <label class="form-label semibold" for="">Certificado</label>
@@ -361,7 +347,7 @@
                 </div>
                 <div class="row divider-top pb-md">
                   <div class="col-sm-12">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-floppy-o mr-xs"
+                    <button type="button" class="btn btn-primary btn-success" data-dismiss="modal"><i class="fa fa-floppy-o mr-xs"
                                                                                           aria-hidden="true"></i>
                       Salvar
                     </button>
@@ -424,7 +410,6 @@
                 <thead>
                 <tr>
                   <th>Material didático</th>
-                  <th class="text-right">Ações</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -432,44 +417,10 @@
                   <td><p><img src="img/cursos/junior/junior-001.jpg" class="img-circle-xs"> Teens 1: Time Zones 1A -
                     (Combo
                     Split) + Activity Pack Teens 1 – Cengage Learning</p></td>
-                  <td>
-                    <div class="btn-group btn-group-sm pull-right">
-                      <button type="button" class="btn btn-default-outline dropdown-toggle" data-toggle="dropdown"
-                              aria-haspopup="true" aria-expanded="false">Ações
-                      </button>
-                      <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
-                          Duplicar</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                          Inativar</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#"><i class="fa fa-trash mr-xs" aria-hidden="true"></i>
-                          Excluir</a>
-                      </div>
-                    </div>
-                  </td>
                 </tr>
                 <tr>
                   <td><p><img src="img/cursos/kids/hooray-a1.jpg" class="img-circle-xs"> Hooray! A – Student’s Book –
                     Helbling Languages</p></td>
-                  <td>
-                    <div class="btn-group btn-group-sm pull-right">
-                      <button type="button" class="btn btn-default-outline dropdown-toggle" data-toggle="dropdown"
-                              aria-haspopup="true" aria-expanded="false">Ações
-                      </button>
-                      <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
-                          Duplicar</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                          Inativar</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#"><i class="fa fa-trash mr-xs" aria-hidden="true"></i>
-                          Excluir</a>
-                      </div>
-                    </div>
-                  </td>
                 </tr>
                 </tbody>
               </table>
@@ -557,9 +508,6 @@
 
 <script src="js/app.js"></script>
 <script src="js/plugins.js"></script>
-
-<script src="js/lib/chartsjs/Chart.min.js"></script>
-<script src="js/paginas/cursos-init-chart.js"></script>
 
 <script src="js/lib/bootstrap-select/bootstrap-select.min.js"></script>
 <script src="js/lib/select2/select2.full.min.js"></script>
