--- a/pages/academico/grupos.html
+++ b/pages/academico/grupos.html
@@ -6,22 +6,22 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>CTJ Flow</title>
 
-  <link href="img/favicon.ico" rel="shortcut icon">
+  <link href="../../img/favicon.ico" rel="shortcut icon">
 
   <!-- css's especificos -->
-  <link rel="stylesheet" href="css/lib/datatables-net/datatables.min.css">
+  <link rel="stylesheet" href="../../css/lib/datatables-net/datatables.min.css">
 
   <!-- css's gerais -->
-  <link rel="stylesheet" href="css/lib/font-awesome/font-awesome.min.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="../../css/lib/font-awesome/font-awesome.min.css">
+  <link rel="stylesheet" href="../../css/main.css">
+  <link rel="stylesheet" href="../../css/custom.css">
 
 
 </head>
 <body class="with-side-menu" ng-app="">
 
-<ng-include src="'includes/header.html'"></ng-include>
-<ng-include src="'includes/side-bar.html'"></ng-include>
+<ng-include src="'../../includes/header.html'"></ng-include>
+<ng-include src="'../../includes/side-bar.html'"></ng-include>
 
 
 <div class="page-content">
@@ -207,19 +207,19 @@
 </div>
 
 
-<script src="js/lib/jquery/jquery.min.js"></script>
-<script src="js/lib/tether/tether.min.js"></script>
-<script src="js/lib/bootstrap/bootstrap.min.js"></script>
+<script src="../../js/lib/jquery/jquery.min.js"></script>
+<script src="../../js/lib/tether/tether.min.js"></script>
+<script src="../../js/lib/bootstrap/bootstrap.min.js"></script>
 
 
-<script src="js/lib/datatables-net/datatables.min.js"></script>
-<script src="js/start-datatables.js"></script>
+<script src="../../js/lib/datatables-net/datatables.min.js"></script>
+<script src="../../js/start-datatables.js"></script>
 
-<script src="js/app.js"></script>
-<script src="js/plugins.js"></script>
+<script src="../../js/app.js"></script>
+<script src="../../js/plugins.js"></script>
 
-<script src="js/lib/angular/angular.min.js"></script>
-<script src="js/lib/angular/controllers.js"></script>
+<script src="../../js/lib/angular/angular.min.js"></script>
+<script src="../../js/lib/angular/controllers.js"></script>
 
 <script>
 
