--- a/pages/servicos/servicos.html
+++ b/pages/servicos/servicos.html
@@ -67,113 +67,114 @@
           </div><!--.tabs-section-nav-->
 
           <div class="tab-content">
-            <section>
-              <div class="row">
-                <div class="col-sm-9">
-                  <div class="form-control-wrapper form-control-icon-right">
-                    <input type="text" class="form-control input-table-custom" placeholder="Filtre nos resultados">
-                    <i class="fa fa-search"></i>
+
+
+            <section role="tabpanel" class="tab-pane fade in active" id="tabs-servicos-tab-1">
+              <section>
+                <div class="row">
+                  <div class="col-sm-9">
+                    <div class="form-control-wrapper form-control-icon-right">
+                      <input type="text" class="form-control input-table-custom" placeholder="Filtre nos resultados">
+                      <i class="fa fa-search"></i>
+                    </div>
+                  </div>
+                  <div class="col-sm-3">
+                    <p class="mt-sm">
+                      <a data-toggle="collapse" data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true"
+                         aria-controls="collapseOne">
+                        <i class="fa fa-search-plus"
+                           aria-hidden="true"></i> Busca avançada</a>
+                    </p>
                   </div>
                 </div>
-                <div class="col-sm-3">
-                  <p class="mt-sm">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true"
-                       aria-controls="collapseOne">
-                      <i class="fa fa-search-plus"
-                         aria-hidden="true"></i> Busca avançada</a>
-                  </p>
-                </div>
-              </div>
-              <div id="collapse-busca-one" class="collapse mt-md" role="tabpanel"
-                   aria-labelledby="collapse-busca-one"
-                   aria-expanded="true">
-                <section class="card">
-                  <div class="card-block">
-                    <div class="row">
-                      <div class="col-sm-3">
-                        <label class="form-label semibold" for="">Busca geral</label>
-                        <div class="form-group input-group mb-0">
-                          <input type="text" class="form-control" aria-label="" placeholder="Buscar serviços">
-                          <div class="input-group-btn">
-                            <button type="button" class="btn btn-default-outline">
-                              <i class="fa fa-search" aria-hidden="true"></i>
+                <div id="collapse-busca-one" class="collapse mt-md" role="tabpanel"
+                     aria-labelledby="collapse-busca-one"
+                     aria-expanded="true">
+                  <section class="card">
+                    <div class="card-block">
+                      <div class="row">
+                        <div class="col-sm-3">
+                          <label class="form-label semibold" for="">Busca geral</label>
+                          <div class="form-group input-group mb-0">
+                            <input type="text" class="form-control" aria-label="" placeholder="Buscar serviços">
+                            <div class="input-group-btn">
+                              <button type="button" class="btn btn-default-outline">
+                                <i class="fa fa-search" aria-hidden="true"></i>
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-3">
+                          <label class="form-label semibold" for="">Tipo de serviço</label>
+                          <select class="select2-arrow">
+                            <option>Workshop</option>
+                            <option>Teste</option>
+                            <option>Evento</option>
+                          </select>
+                        </div>
+                        <div class="col-sm-3"><label class="form-label semibold" for="">Público-alvo</label>
+                          <select class="select2-arrow">
+                            <option>Empresários</option>
+                            <option>Melhor idade</option>
+                            <option>Jovens</option>
+                          </select>
+                        </div>
+                        <div class="col-sm-3">
+                          <label class="form-label semibold" for="">Divulgação site</label>
+                          <div class="form-group">
+                            <div class="btn-group btn-group-sm" data-toggle="buttons">
+                              <label class="btn btn-secondary active">
+                                <input type="radio" name="options" id="" autocomplete="off" checked="">
+                                Privado
+                              </label>
+                              <label class="btn btn-secondary">
+                                <input type="radio" name="options" id="" autocomplete="off"> Publico
+                              </label>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row mt-md divider-top">
+                        <div class="col-sm-3">
+                          <div class="checkbox-toggle">
+                            <input type="checkbox" id="check-toggle-Ativo"/>
+                            <label class="form-label" for="check-toggle-Ativo">Ativo</label>
+                          </div>
+                        </div>
+                        <div class="col-sm-3">
+                          <div class="checkbox-toggle">
+                            <input type="checkbox" id="check-toggle-Gratuito"/>
+                            <label class="form-label" for="check-toggle-Gratuito">Gratuito</label>
+                          </div>
+                        </div>
+                        <div class="col-sm-3">
+                          <div class="checkbox-toggle">
+                            <input type="checkbox" id="check-toggle-Certificado"/>
+                            <label class="form-label" for="check-toggle-Certificado">Certificado</label>
+                          </div>
+                        </div>
+                        <div class="col-sm-3">
+                          <div class="checkbox-toggle">
+                            <input type="checkbox" id="check-toggle-Desconto"/>
+                            <label class="form-label" for="check-toggle-Desconto">Desconto</label>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row divider-top">
+                        <div class="col-sm-12">
+                          <div>
+                            <button type="button" class="btn btn-primary btn-sm mt-sm">Buscar</button>
+                            <button type="button" class="btn btn-secondary btn-sm ml-md mt-sm" data-toggle="collapse"
+                                    data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true"
+                                    aria-controls="collapseOne">Cancelar
                             </button>
                           </div>
                         </div>
                       </div>
-                      <div class="col-sm-3">
-                        <label class="form-label semibold" for="">Tipo de serviço</label>
-                        <select class="select2-arrow">
-                          <option>Workshop</option>
-                          <option>Teste</option>
-                          <option>Evento</option>
-                        </select>
-                      </div>
-                      <div class="col-sm-3"><label class="form-label semibold" for="">Público-alvo</label>
-                        <select class="select2-arrow">
-                          <option>Empresários</option>
-                          <option>Melhor idade</option>
-                          <option>Jovens</option>
-                        </select>
-                      </div>
-                      <div class="col-sm-3">
-                        <label class="form-label semibold" for="">Divulgação site</label>
-                        <div class="form-group">
-                          <div class="btn-group btn-group-sm" data-toggle="buttons">
-                            <label class="btn btn-secondary active">
-                              <input type="radio" name="options" id="" autocomplete="off" checked="">
-                              Privado
-                            </label>
-                            <label class="btn btn-secondary">
-                              <input type="radio" name="options" id="" autocomplete="off"> Publico
-                            </label>
-                          </div>
-                        </div>
-                      </div>
                     </div>
-                    <div class="row mt-md divider-top">
-                      <div class="col-sm-3">
-                        <div class="checkbox-toggle">
-                          <input type="checkbox" id="check-toggle-Ativo"/>
-                          <label class="form-label" for="check-toggle-Ativo">Ativo</label>
-                        </div>
-                      </div>
-                      <div class="col-sm-3">
-                        <div class="checkbox-toggle">
-                          <input type="checkbox" id="check-toggle-Gratuito"/>
-                          <label class="form-label" for="check-toggle-Gratuito">Gratuito</label>
-                        </div>
-                      </div>
-                      <div class="col-sm-3">
-                        <div class="checkbox-toggle">
-                          <input type="checkbox" id="check-toggle-Certificado"/>
-                          <label class="form-label" for="check-toggle-Certificado">Certificado</label>
-                        </div>
-                      </div>
-                      <div class="col-sm-3">
-                        <div class="checkbox-toggle">
-                          <input type="checkbox" id="check-toggle-Desconto"/>
-                          <label class="form-label" for="check-toggle-Desconto">Desconto</label>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row divider-top">
-                      <div class="col-sm-12">
-                        <div>
-                          <button type="button" class="btn btn-primary btn-sm mt-sm">Buscar</button>
-                          <button type="button" class="btn btn-secondary btn-sm ml-md mt-sm" data-toggle="collapse"
-                                  data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true"
-                                  aria-controls="collapseOne">Cancelar
-                          </button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </section>
-              </div>
-            </section>
-
-            <section role="tabpanel" class="tab-pane fade in active" id="tabs-servicos-tab-1">
+                  </section>
+                </div>
+              </section>
               <div class="row mt-md">
                 <div class="col-sm-12">
                   <div class="table-responsive table-custom">
@@ -279,7 +280,7 @@
                 <div class="col-sm-4">
                   <label class="form-label semibold" for="">Grupo(s) <span
                           class="semibold text-danger h4">*</span></label>
-                  <select class="select2" multiple="multiple">
+                  <select class="select2 open-select2" multiple="multiple">
                     <option>Crianças</option>
                     <option>Adolescentes</option>
                     <option>Jovens e adultos</option>
